plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.143'
}
version = mod_version
group = mod_group_id
base { archivesName = mod_id }
java.toolchain.languageVersion = JavaLanguageVersion.of(21)
neoForge {
    version = project.neo_version
    runs { client { client() }; server { server(); programArgument '--nogui' } }
    mods { "${mod_id}" { sourceSet(sourceSets.main) } }
}
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
processResources {
    def props = [minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
                 neo_version: neo_version, neo_version_range: neo_version_range, loader_version_range: loader_version_range,
                 mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version]
    inputs.properties props
    filteringCharset = 'UTF-8'
    filesMatching('META-INF/neoforge.mods.toml') { expand props }
}
